--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # Ignore sensitive or environment-specific configs
 appsettings.Development.json
+appsettings.Staging.json
 appsettings.Production.json
 appsettings.*.local.json
 .env
@@ -63,3 +64,5 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+.env.development
+.env.production
