--- a/services/helios.identity/helios.identity.client/package.json
+++ b/services/helios.identity/helios.identity.client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint ./src",
+    "fix": "eslint --fix ./src",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,7 +18,8 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "sass": "^1.93.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
