Updated context to properly define things, also got a lot of the functionality working with fetching, automapper, etc

--- a/services/helios.identity/helios.identity.api/helios.identity.api.csproj
+++ b/services/helios.identity/helios.identity.api/helios.identity.api.csproj
@@ -26,11 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Config\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\helios.identity.data\helios.identity.data.csproj" />
+    <ProjectReference Include="..\helios.identity.models\helios.identity.models.csproj" />
   </ItemGroup>
 
 </Project>
