Added test code for api Jenkinsfile

--- a/services/helios.identity/helios.identity.client/Jenkinsfile
+++ b/services/helios.identity/helios.identity.client/Jenkinsfile
@@ -18,55 +18,61 @@ pipeline {
             }
         }
 
-        stage('Install Dependencies') {
-            when {
-                anyOf {
-                    changeset '/src/**'
-                    changeset '/package.json'
-                    changeset '/package-lock.json'
-                    changeset 'Jenkinsfile'
-                    expression { return params.FORCE_RUN }
-                }
-            }
+        stage('test') {
             steps {
-                sh 'npm install'
+                sh 'echo "hello world"'   
             }
         }
 
-        stage('Build') {
-            when {
-                anyOf {
-                    changeset '/src/**'
-                    changeset '/package.json'
-                    changeset '/package-lock.json'
-                    changeset 'Jenkinsfile'
-                    expression { return params.FORCE_RUN }
-                }
-            }
-            steps {
-            	sh 'npm run build'
-            }
-        }
+        // stage('Install Dependencies') {
+        //     when {
+        //         anyOf {
+        //             changeset '/src/**'
+        //             changeset '/package.json'
+        //             changeset '/package-lock.json'
+        //             changeset 'Jenkinsfile'
+        //             expression { return params.FORCE_RUN }
+        //         }
+        //     }
+        //     steps {
+        //         sh 'npm install'
+        //     }
+        // }
 
-        stage('Deploy') {
-            when {
-                anyOf {
-                    changeset '/src/**'
-                    changeset '/package.json'
-                    changeset '/package-lock.json'
-                    changeset 'Jenkinsfile'
-                    expression { return params.FORCE_RUN }
-                }
-            }
-            steps {
-                withCredentials([
-					string(credentialsId: 'vps-username', variable: 'USERNAME'),
-					string(credentialsId: 'vps-domain', variable: 'DOMAIN')
-				]) {
-					scpBuildFilesToWWW(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
-					updateNginxConf(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
-				}
-            }
-        }
+        // stage('Build') {
+        //     when {
+        //         anyOf {
+        //             changeset '/src/**'
+        //             changeset '/package.json'
+        //             changeset '/package-lock.json'
+        //             changeset 'Jenkinsfile'
+        //             expression { return params.FORCE_RUN }
+        //         }
+        //     }
+        //     steps {
+        //     	sh 'npm run build'
+        //     }
+        // }
+
+        // stage('Deploy') {
+        //     when {
+        //         anyOf {
+        //             changeset '/src/**'
+        //             changeset '/package.json'
+        //             changeset '/package-lock.json'
+        //             changeset 'Jenkinsfile'
+        //             expression { return params.FORCE_RUN }
+        //         }
+        //     }
+        //     steps {
+        //         withCredentials([
+		// 			string(credentialsId: 'vps-username', variable: 'USERNAME'),
+		// 			string(credentialsId: 'vps-domain', variable: 'DOMAIN')
+		// 		]) {
+		// 			scpBuildFilesToWWW(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
+		// 			updateNginxConf(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
+		// 		}
+        //     }
+        // }
     }
 }
