--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -3,18 +3,18 @@
 pipeline {
     agent any
 
-	environment {
-        // relative path from repo root to this microservice
-        SERVICE_DIR = 'services/helios.identity/helios.identity.api'
-        PUBLISH_DIR = "${SERVICE_DIR}/publish"
-    }
-
     parameters {
         booleanParam(
             name: 'FORCE_RUN',
             defaultValue: false,
             description: 'Forces run even if there are no changes'
         )
+    }
+
+    environment {
+        DIR = 'services/helios.identity/helios.identity.api'
+        USERNAME = credentials('vps-username')
+        DOMAIN = credentials('vps-domain')
     }
 
     stages {
@@ -27,53 +27,44 @@ pipeline {
         stage('Install Dependencies') {
             when {
                 anyOf {
-                    changeset '/src/**'
-                    changeset '/package.json'
-                    changeset '/package-lock.json'
-                    changeset 'Jenkinsfile'
+                    changeset "${DIR}"
                     expression { return params.FORCE_RUN }
                 }
             }
             steps {
                 sh 'dotnet restore services/helios.identity/helios.identity.sln'
-				sh 'dotnet build services/helios.identity/helios.identity.sln -c Release'
+                sh 'dotnet build services/helios.identity/helios.identity.sln -c Release'
             }
         }
 
-        stage('Build') {
-            when {
-                anyOf {
-                    changeset '/src/**'
-                    changeset '/package.json'
-                    changeset '/package-lock.json'
-                    changeset 'Jenkinsfile'
-                    expression { return params.FORCE_RUN }
-                }
-            }
-            steps {
-            	sh 'npm run build'
-            }
-        }
+        // stage('Build') {
+        //     when {
+        //         anyOf {
+        //             changeset "${DIR}"
+        //             expression { return params.FORCE_RUN }
+        //         }
+        //     }
+        //     steps {
+        //     	sh 'npm run build'
+        //     }
+        // }
 
-        stage('Deploy') {
-            when {
-                anyOf {
-                    changeset '/src/**'
-                    changeset '/package.json'
-                    changeset '/package-lock.json'
-                    changeset 'Jenkinsfile'
-                    expression { return params.FORCE_RUN }
-                }
-            }
-            steps {
-                withCredentials([
-					string(credentialsId: 'vps-username', variable: 'USERNAME'),
-					string(credentialsId: 'vps-domain', variable: 'DOMAIN')
-				]) {
-					scpBuildFilesToWWW(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
-					updateNginxConf(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
-				}
-            }
-        }
+        // stage('Deploy') {
+        //     when {
+        //         anyOf {
+        //             changeset "${DIR}"
+        //             expression { return params.FORCE_RUN }
+        //         }
+        //     }
+        //     steps {
+        //         withCredentials([
+		// 			string(credentialsId: 'vps-username', variable: 'USERNAME'),
+		// 			string(credentialsId: 'vps-domain', variable: 'DOMAIN')
+		// 		]) {
+		// 			scpBuildFilesToWWW(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
+		// 			updateNginxConf(USERNAME, DOMAIN, 'helios-identity.qrcool.ca')
+		// 		}
+        //     }
+        // }
     }
 }
