Added top-level when statement for pipeline

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -17,6 +17,13 @@ pipeline {
         DOMAIN = credentials('vps-domain')
     }
 
+    when {
+        anyOf {
+            changeset "${DIR}"
+            expression { return params.FORCE_RUN }
+        }
+    }
+
     stages {
         stage('Checkout') {
             steps {
