--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -12,6 +12,7 @@ pipeline {
     }
 
     environment {
+        SOLUTION_DIR = 'services/helios.identity'
         DIR = 'services/helios.identity/helios.identity.api'
         USERNAME = credentials('vps-username')
         DOMAIN = credentials('vps-domain')
@@ -32,17 +33,20 @@ pipeline {
                 }
             }
             steps {
-                script {
-                    def imageName = "helios-identity"
-                    def imageTag = "latest"   // or BUILD_NUMBER, git commit hash, etc.
 
-                    echo "Building Docker image for ${DIR}..."
+                dir ("${SOLUTION_DIR}") {
+                    script {
+                        def imageName = "helios-identity"
+                        def imageTag = "latest"   // or BUILD_NUMBER, git commit hash, etc.
 
-                    sh """
-                    docker build \
-                        -t ${imageName}:${imageTag} \
-                        ${DIR}
-                    """
+                        echo "Building Docker image for ${DIR}..."
+
+                        sh """
+                        docker build \
+                            -t ${imageName}:${imageTag} \
+                            ${SOLUTION_DIR}
+                        """
+                    }
                 }
             }
         }
