Added debug line

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -40,6 +40,7 @@ pipeline {
                         def imageTag = "latest"   // or BUILD_NUMBER, git commit hash, etc.
 
                         echo "Building Docker image for ${DIR}..."
+                        sh "pwd"
 
                         sh """
                         docker build \
