Potentially fixed things

--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -44,8 +44,7 @@ pipeline {
 
                         sh """
                         docker build \
-                            -t ${imageName}:${imageTag} \
-                            ${SOLUTION_DIR}
+                            -t ${imageName}:${imageTag} 
                         """
                     }
                 }
