--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -44,7 +44,8 @@ pipeline {
 
                         sh """
                         docker build \
-                            -t ${imageName}:${imageTag} 
+                            -t ${imageName}:${imageTag} \
+                            helios.identity.api
                         """
                     }
                 }
