--- a/services/helios.identity/helios.identity.api/Jenkinsfile
+++ b/services/helios.identity/helios.identity.api/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
                         
                         sh """
                         docker build \
-                            -f .\helios.identity.api\Dockerfile \
+                            -f ./helios.identity.api/Dockerfile \
                             -t ${imageName}:${imageTag} \
                             .
                         """
