Fixed mistake with nginx update for prod step

--- a/services/helios.identity/helios.identity.client/Jenkinsfile
+++ b/services/helios.identity/helios.identity.client/Jenkinsfile
@@ -131,7 +131,7 @@ pipeline {
             }
             steps {
                 dir("${DIR}") {
-                    updateNginxConf(USERNAME, DOMAIN, 'prod.helios-identity.qrcool.ca', 'nginx.prod.conf')
+                    updateNginxConf(USERNAME, DOMAIN, 'helios-identity.qrcool.ca', 'nginx.prod.conf')
                 }
             }
         }
